WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
316646
[JSC] Set class field function names at parse time instead of via `SetFunctionName`
https://bugs.webkit.org/show_bug.cgi?id=316646
Summary
[JSC] Set class field function names at parse time instead of via `SetFunctio...
Sosuke Suzuki
Reported
2026-06-09 03:13:23 PDT
...
Attachments
Add attachment
proposed patch, testcase, etc.
Sosuke Suzuki
Comment 1
2026-06-09 03:14:42 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/66761
EWS
Comment 2
2026-06-09 22:54:20 PDT
Committed
314873@main
(b6a9b84dae1f): <
https://commits.webkit.org/314873@main
> Reviewed commits have been landed. Closing PR #66761 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2026-06-09 22:55:13 PDT
<
rdar://problem/179196857
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug